[package]

name = "mach"
version = "0.1.2"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "David Cuddeback <david.cuddeback@gmail.com>"]

license = "BSD-2-Clause"

description = "A Rust interface to the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/fitzgen/mach"

readme = "README.md"

[dependencies.libc]
version = "0.2"
default-features = false

[features]
default = [ "use_std", "deprecated" ]
use_std = [ "libc/use_std" ]
# Enables deprecated and removed APIs.
deprecated = []
