[package]
name = "mach"
version = "0.3.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "David Cuddeback <david.cuddeback@gmail.com>"]
license = "BSD-2-Clause"
description = "A Rust interface to the user-space API of the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/fitzgen/mach"
readme = "README.md"
keywords = ["kernel", "macos", "darwin"]
categories = ["api-bindings", "external-ffi-bindings", "no-std", "os"]

[badges]
travis-ci = { repository = "fitzgen/mach" }
is-it-maintained-issue-resolution = { repository = "fitzgen/mach" }
is-it-maintained-open-issues = { repository = "fitzgen/mach" }
maintenance = { status = "passively-maintained" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = { version = "0.2", default-features = false }

[features]
default = [ "use_std" ]
use_std = [ "libc/use_std" ]
# Enables unstable / nightly-only features
unstable = []
# Enables deprecated and removed APIs.
deprecated = []

[workspace]
members = ["mach-test"]
