[package]
name = "mach"
version = "0.3.2"
authors = [
  "Nick Fitzgerald <fitzgen@gmail.com>",
  "David Cuddeback <david.cuddeback@gmail.com>",
  "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"
]
license = "BSD-2-Clause"
description = "A Rust interface to the user-space API of the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/fitzgen/mach"
readme = "README.md"
keywords = ["kernel", "macos", "darwin"]
categories = ["api-bindings", "external-ffi-bindings", "no-std", "os"]
edition = "2015"

[badges]
travis-ci = { repository = "fitzgen/mach" }
is-it-maintained-issue-resolution = { repository = "fitzgen/mach" }
is-it-maintained-open-issues = { repository = "fitzgen/mach" }
maintenance = { status = "passively-maintained" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = { version = "0.2", default-features = false }
rustc-std-workspace-core = { version = "1.0.0", optional = true }

[features]
default = []
# Enables deprecated and removed APIs.
deprecated = []
rustc-dep-of-std = ['rustc-std-workspace-core', 'libc/rustc-dep-of-std']

[workspace]
members = ["mach-test"]
